<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">匿名上位机</string>
    <string name="btn_set">飞控设置</string>
    <string name="btn_col">飞行控制</string>
    <string name="btn_bt_link">蓝牙连接</string>
    <string name="btn_wifi_set">WIFI连接</string>
    <string name="btn_yaw_a">右转</string>
    <string name="btn_yaw_d">左转</string>
    <string name="btn_stop">紧急停机</string>
    <string name="text_control_logo">ANO TC 匿名科创</string>
    <string name="text_acc_x">加速度 X:</string>
    <string name="text_acc_y">加速度 Y:</string>
    <string name="text_acc_z">加速度 Z:</string>
    <string name="text_gyr_x">陀螺仪 X:</string>
    <string name="text_gyr_y">陀螺仪 Y:</string>
    <string name="text_gyr_z">陀螺仪 Z:</string>
    <string name="text_rol">横滚:</string>
    <string name="text_pit">俯仰:</string>
    <string name="text_yaw">航向:</string>
    <string name="btn_read_set">读取飞控</string>
    <string name="btn_write_set">写入飞控</string>
    <string name="btn_cal_acc">加速度矫正</string>
    <string name="btn_cal_gyr">陀螺仪矫正</string>

    <!--  BluetoothJoystick -->
    <string name="title_connected_to">connected to:</string>
    <string name="title_connecting">connecting</string>
    <string name="title_not_connected">not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth JoyStick.</string>
    <string name="not_connected">You are not connected to a device</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>


</resources>
